--- a/styles.css
+++ b/styles.css
@@ -186,8 +186,8 @@ nav ul li a:hover {
 }
 
 .carousel-slide img {
-    width: auto;
-    height: auto;
+    width: 550;
+    height: 600;
    border-color white;
    border-radius: 10px;
    box-shadow: white;
